tests/haste_package_vs_module_incremental/haste_package_vs_module_incremental.exp
'package' module resolves to file:
Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `pkg` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (pkg: string); // error
       ^^^

References:
   package.js:6:16
   6| export default 123;
                     ^^^ [1]
   test.js:4:7
   4| (pkg: string); // error
            ^^^^^^ [2]



Found 1 error

duplicate provider:
Error ----------------------------------------------------------------------------------------- package/package.json:1:1

Duplicate module provider for `package`. Change either this module provider or the current module provider [1].
[duplicate-module]

   package/package.json:1:1
   1| {
      

References:
   package.js:1:1
   1| /**
       [1]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `pkg` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (pkg: string); // error
       ^^^

References:
   package.js:6:16
   6| export default 123;
                     ^^^ [1]
   test.js:4:7
   4| (pkg: string); // error
            ^^^^^^ [2]



Found 2 errors

'package' module resolves to package:
Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `pkg` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (pkg: string); // error
       ^^^

References:
   package/index.js:3:16
   3| export default 123;
                     ^^^ [1]
   test.js:4:7
   4| (pkg: string); // error
            ^^^^^^ [2]



Found 1 error

duplicate provider:
Error ----------------------------------------------------------------------------------------- package/package.json:1:1

Duplicate module provider for `package`. Change either this module provider or the current module provider [1].
[duplicate-module]

   package/package.json:1:1
   1| {
      

References:
   package.js:1:1
   1| /**
       [1]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `pkg` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (pkg: string); // error
       ^^^

References:
   package/index.js:3:16
   3| export default 123;
                     ^^^ [1]
   test.js:4:7
   4| (pkg: string); // error
            ^^^^^^ [2]



Found 2 errors

'package' module resolves to file again:
Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `pkg` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (pkg: string); // error
       ^^^

References:
   package.js:6:16
   6| export default 123;
                     ^^^ [1]
   test.js:4:7
   4| (pkg: string); // error
            ^^^^^^ [2]



Found 1 error
